# datachat

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py
app/api/: __init__.py  app.py  factory.py  sse.py
app/llm/: __init__.py  base.py  extract.py  mock.py  openai.py
app/sandbox/: __init__.py  harness.py  runner.py
app/store/: __init__.py  datasets.py  db.py  exporter.py  models.py
docs/: DEPLOY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: FigurePlot.tsx
frontend/src/lib/: api.ts
frontend/src/types/: plotly.d.ts
tests/: test_branch.py  test_extract.py  test_gallery.py  test_http.py  test_sandbox.py  test_store.py  test_v4_exporter.py
