[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datachat"
version = "0.1.0"
description = "AI-powered data analysis platform with sandboxed Python execution and inline Plotly charts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "SAY-5", email = "saiasish.cnp@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.24",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
postgres = ["psycopg[binary]>=3.2"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "ruff>=0.8",
    "httpx>=0.27",
]

[project.scripts]
datachat = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "benchmark: performance benchmark (skipped unless --benchmark-only)",
    "slow: slow integration test",
]
addopts = "-m 'not benchmark'"
